# yal

./: .clang-format  CMakeLists.txt  format.bat  nMakefile
examples/: slist.c
inc/yal/: lock.h  mutex.h  single_list.h
inc/yal/misc/: array.h  container_of.h  mem.h
src/: single_list.c
